green overflow problem resolve

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -417,6 +417,7 @@
   display: flex;
   flex-direction: row;
   overflow: hidden;
+  position: relative;
 }
 
 .divblock {
